--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Victor Lopez</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <section id="landing-page">
@@ -16,26 +17,39 @@
           <li class="nav__link">
             <a
               href="#"
-              class="nav__link--anchor, link__hover-effect, link__hover-effect--black"
+              class="nav__link--anchor link__hover-effect link__hover-effect--black"
               >About</a
             >
           </li>
           <li class="nav__link">
             <a
               href="#"
-              class="nav__link--anchor, link__hover-effect, link__hover-effect--black"
+              class="nav__link--anchor link__hover-effect link__hover-effect--black"
               >Projects</a
             >
           </li>
           <li class="nav__link">
             <a
               href="#"
-              class="nav__link--anchor, link__hover-effect, link__hover-effect--black"
+              class="nav__link--anchor link__hover-effect link__hover-effect--black"
               >Contact</a
+            >
+          </li>
+          <li class="nav__link">
+            <a
+              href="#"
+              class="nav__link--anchor link__hover-effect link__hover-effect--black"
+              ><i class="fas fa-adjust"></i></a
             >
           </li>
         </ul>
       </nav>
+      <header class="header">
+        <div class="header__content">
+          <h1 class="title">Hey!</h1>
+          <h1 class="title title--secondary">I'm Victor</h1>
+        </div>
+      </header>
     </section>
   </body>
 </html>
