--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Victor Lopez</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/a6be311be5.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <section id="landing-page">
@@ -39,8 +39,7 @@
             <a
               href="#"
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
-              ><i class="fas fa-adjust"></i></a
-            >
+              ><i class="fa-solid fa-circle-half-stroke"></i></a>
           </li>
         </ul>
       </nav>
