--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               >Contact</a
             >
           </li>
-          <li class="nav__link">
+          <li class="nav__link click">
             <a
               href="#"
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
@@ -46,9 +46,35 @@
       <header class="header">
         <div class="header__content">
           <h1 class="title">Hey!</h1>
-          <h1 class="title title--secondary">I'm Victor</h1>
+          <h1 class="title orange">I'm Victor</h1>
+          <p class="header__para">
+            I'm a <b class="orange">Frontend Software Engineer</b> with a strong passion for building web applications with great user experiences.
+            <br>
+            Heres a bit more <b class="orange">about me.</b>
+          </p>
+          <div class="social__list">
+            <a href="https://www.linkedin.com/in/victor-lopez-685809333/" target="_blank" class="social__link click"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://github.com/Victorghub" target="_blank" class="social__link click"><i class="fa-brands fa-square-github"></i></a>
         </div>
       </header>
+      <button class="mail__btn click">
+        <i class="fa-solid fa-envelope"></i>
+      </button>
+      <a href="#projects" class="scroll">
+        <div class="scroll__icon click"></div>
+      </a>
+    </section>
+    <section id="projects">
+      <div class="container">
+        <div class="row">
+          <h1 class="section__title">
+            Here's some of my <span class="orange">projects</span> 
+          </h1>
+          <ul class="project__list">
+            <li class="project"></li>
+          </ul>
+        </div>
+      </div>
     </section>
   </body>
 </html>
