--- a/index.html
+++ b/index.html
@@ -71,7 +71,11 @@
             Here's some of my <span class="orange">projects</span> 
           </h1>
           <ul class="project__list">
-            <li class="project"></li>
+            <li class="project">
+              <div class="project__wrapper">
+                <img src="/Assets/blinker mockup.png" alt="">
+              </div>
+            </li>
           </ul>
         </div>
       </div>
