--- a/index.html
+++ b/index.html
@@ -73,7 +73,10 @@
           <ul class="project__list">
             <li class="project">
               <div class="project__wrapper">
-                <img src="/Assets/blinker mockup.png" alt="">
+                <img src="/Assets/blinker mockup.png" class="project__img" alt="">
+                <div class="project__description">
+                  <div class="project__description--title"></div>
+                </div>
               </div>
             </li>
           </ul>
