--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <section id="landing-page">
       <nav>
         <figure>
-          <img id="personal-logo" src="./Assets/Brand Black. transparent.png" alt="" />
+          <img id="#personal-logo" src="./Assets/Brand Black. transparent.png" alt="" />
         </figure>
         <ul class="nav__link--list">
           <li class="nav__link">
@@ -74,8 +74,25 @@
             <li class="project">
               <div class="project__wrapper">
                 <img src="/Assets/blinker mockup.png" class="project__img" alt="">
+                <div class="project__wrapper--bg"></div>
                 <div class="project__description">
-                  <div class="project__description--title"></div>
+                  <h3 class="project__description--title">
+                    Project Name 1
+                  </h3>
+                  <h4 class="project__description--sub-title">
+                    HTML,CSS, JAVASCRIPT, VUE
+                  </h4>
+                  <p class="project__description--para">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde aperiam nesciunt quibusdam natus culpa, deleniti facilis nam! Sequi consectetur, dolores dignissimos placeat aliquam quisquam! Ab beatae qui cum quo similique!
+                  </p>
+                  <div class="project__description--links">
+                    <a href="" class="project__description--link">
+                      <i class="fa-brands fa-square-github"></i>
+                    </a>
+                    <a href="" class="project__description--link">
+                      <i class="fa-solid fa-link"></i>
+                    </a>
+                  </div>
                 </div>
               </div>
             </li>
@@ -83,5 +100,29 @@
         </div>
       </div>
     </section>
+    <footer>
+      <div class="container">
+        <div class="row footer__row">
+        <figure>
+        <img class="footer__logo--img" src="./Assets/Brand Black. transparent.png" alt="">
+      </figure>
+      <div class="footer__social--list">
+        <a href="#" class="footer__social--link link__hover-effect link__hover-effect--white">
+          Github
+        </a>
+        <a href="#" class="footer__social--link link__hover-effect link__hover-effect--white">
+          LinkedIn
+        </a>
+        <a href="#" class="footer__social--link link__hover-effect link__hover-effect--white">
+          Contact
+        </a>
+        <a href="#" class="footer__social--link link__hover-effect link__hover-effect--white">
+          Resume
+        </a>
+      </div>
+      <div class="footer__copyright">Copyright © 2024 Victor Lopez</div>
+    </div>
+      </div>
+    </footer>
   </body>
 </html>
