--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <section id="landing-page">
       <nav>
         <figure>
-          <img id="#personal-logo" src="./Assets/Brand Black. transparent.png" alt="" />
+          <img id="personal-logo" src="./Assets/Brand Black. transparent.png" alt="" />
         </figure>
         <ul class="nav__link--list">
           <li class="nav__link">
