--- a/index.html
+++ b/index.html
@@ -64,7 +64,29 @@
         <div class="scroll__icon click"></div>
       </a>
       <div class="modal">
-        <div class="modal__half modal__about">Here's a bit more about me.</div>
+        <div class="modal__half modal__about">
+          <h3 class="modal__title modal__title--about">Here's a bit about me.</h3>
+          <h4 class="modal__sub-title modal__sub-title--about">Frontend Software Engineer</h4>
+          <p class="modal__para">
+            I'm a 24 year old Frontend Software Engineer with a strong passion for developing websites with great user experiences.
+            <br>
+            I currently work on extremely difficult engineering problems and learn from a team consisting of some of the most talented and experienced software engineers every day.
+            <div class="modal__languages">
+              <figure>
+                <img src="" alt="">
+              </figure>
+              <figure>
+                <img src="" alt="">
+              </figure>
+              <figure>
+                <img src="" alt="">
+              </figure>
+              <figure>
+                <img src="" alt="">
+              </figure>
+            </div>
+          </p>
+        </div>
         <div class="modal__half modal__contact">Let's have a chat!</div>
       </div>
     </section>
