--- a/index.html
+++ b/index.html
@@ -68,26 +68,35 @@
           <h3 class="modal__title modal__title--about">Here's a bit about me.</h3>
           <h4 class="modal__sub-title modal__sub-title--about">Frontend Software Engineer</h4>
           <p class="modal__para">
-            I'm a 24 year old Frontend Software Engineer with a strong passion for developing websites with great user experiences.
+            I'm a 24 year old <b class="orange">Frontend Software Engineer</b> with a strong passion for developing websites with great <b class="orange">user experiences.</b>
             <br>
-            I currently work on extremely difficult engineering problems and learn from a team consisting of some of the most talented and experienced software engineers every day.
+            I currently work on extremely difficult engineering problems and learn from a team consisting of some of the most <b class="orange">talented</b> and <b class="orange">experienced</b> software engineers every day.
             <div class="modal__languages">
-              <figure>
-                <img src="" alt="">
+              <figure class="modal__language">
+                <img class="modal__language--img" src="./Assets/HTML5_logo.png" alt="">
+              <span class="language__name">HTML</span>
               </figure>
-              <figure>
-                <img src="" alt="">
+              <figure class="modal__language">
+                <img class="modal__language--img" src="./Assets/css-131-722685.webp" alt="">
+                <span class="language__name">CSS</span>
               </figure>
-              <figure>
-                <img src="" alt="">
+              <figure class="modal__language">
+                <img class="modal__language--img" src="./Assets/javascript-1-225993.webp" alt="">
+                <span class="language__name">JAVASCRIPT</span>
               </figure>
-              <figure>
-                <img src="" alt="">
+              <figure class="modal__language">
+                <img class="modal__language--img" src="./Assets/react-3-1175109.webp" alt="">
+                <span class="language__name">REACT</span>
               </figure>
             </div>
           </p>
         </div>
-        <div class="modal__half modal__contact">Let's have a chat!</div>
+        <div class="modal__half modal__contact">
+          <h3 class="modal__title modal__title--contact">Let's have a chat!</h3>
+          <h4 class="modal__sub-title modal__sub-title--contact">
+            I'm currently open to new opportunities.
+          </h4>
+        </div>
       </div>
     </section>
     <section id="projects">
