--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       });
    })();
 </script>
+   </script>
   </head>
   <body>
     <section id="landing-page">
@@ -107,7 +108,7 @@
           <h4 class="modal__sub-title modal__sub-title--contact">
             I'm currently open to new opportunities.
           </h4>
-          <form id="contact_form" onsubmit="contact(event)"> </form>
+          <form id="contact_form" onsubmit="contact(event)"></form>
             <div class="form__item">
               <label class="form__item--label">Name</label>
               <input class="input" name="user_name" type="text"></input>
