--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           <h4 class="modal__sub-title modal__sub-title--contact">
             I'm currently open to new opportunities.
           </h4>
-          <form id="contact_form" onsubmit="contact(event)"></form>
+          <form id="contact_form" onsubmit="contact(event)">
             <div class="form__item">
               <label class="form__item--label">Name</label>
               <input class="input" name="user_name" type="text"></input>
