--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
    </script>
   </head>
   <body>
-    <section id="landing-page">
+    <section id="landing-page" onmousemove="moveBackground(event)">
       <nav>
         <figure>
           <img id="personal-logo" src="./Assets/Brand Black. transparent.png" alt="" />
@@ -29,25 +29,25 @@
           <li class="nav__link">
             <a
               href="#"
-              class="nav__link--anchor link__hover-effect link__hover-effect--black"
+              class="nav__link--anchor link__hover-effect link__hover-effect--black" onclick="toggleModal()"
               >About</a
             >
           </li>
           <li class="nav__link">
             <a
-              href="#"
+              href="#projects"
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
               >Projects</a
             >
           </li>
-          <li class="nav__link">
+          <li class="nav__link" onclick="toggleModal()">
             <a
               href="#"
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
               >Contact</a
             >
           </li>
-          <li class="nav__link click">
+          <li class="nav__link click" onclick="toggleContrast()">
             <a
               href="#"
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
@@ -62,14 +62,15 @@
           <p class="header__para">
             I'm a <b class="orange">Frontend Software Engineer</b> with a strong passion for building web applications with great user experiences.
             <br>
-            Heres a bit more <b class="orange">about me.</b>
+            Heres a bit more <b class="orange click" onclick="toggleModal()">about me.</b>
           </p>
           <div class="social__list">
             <a href="https://www.linkedin.com/in/victor-lopez-685809333/" target="_blank" class="social__link click"><i class="fa-brands fa-linkedin"></i></a>
             <a href="https://github.com/Victorghub" target="_blank" class="social__link click"><i class="fa-brands fa-square-github"></i></a>
         </div>
       </header>
-      <button class="mail__btn click">
+      <a href="#"></a>
+      <button class="mail__btn click" onclick="toggleModal()">
         <i class="fa-solid fa-envelope"></i>
       </button>
       <a href="#projects" class="scroll">
@@ -104,6 +105,7 @@
           </p>
         </div>
         <div class="modal__half modal__contact">
+          <i class="fa-solid fa-x modal__exit click" onclick="toggleModal()"></i>
           <h3 class="modal__title modal__title--contact">Let's have a chat!</h3>
           <h4 class="modal__sub-title modal__sub-title--contact">
             I'm currently open to new opportunities.
@@ -130,8 +132,16 @@
             Thanks for your message, looking forward to speaking with you!
           </div>
         </div>
-        <i class="fa-solid fa-x modal__exit click"></i>
       </div>
+      <img src="./Assets/semi circle.svg" class="shape shape--0">
+      <img src="./Assets/circle.svg" class="shape shape--1">
+      <img src="./Assets/squiggly.svg" class="shape shape--2">
+      <img src="./Assets/circle.svg" class="shape shape--3">
+      <img src="./Assets/triangle.svg" class="shape shape--4">
+      <img src="./Assets/circle.svg" class="shape shape--5">
+      <img src="./Assets/squiggly.svg" class="shape shape--6">
+      <img src="./Assets/circle.svg" class="shape shape--7">
+      <img src="./Assets/semi circle.svg" class="shape shape--8">
     </section>
     <section id="projects">
       <div class="container">
@@ -176,16 +186,16 @@
         <img class="footer__logo--img" src="./Assets/Brand Black. transparent.png" alt="">
       </figure>
       <div class="footer__social--list">
-        <a href="#" class="footer__social--link link__hover-effect link__hover-effect--white">
+        <a href="https://github.com/Victorghub" target="_blank" class="footer__social--link link__hover-effect link__hover-effect--white">
           Github
         </a>
-        <a href="#" class="footer__social--link link__hover-effect link__hover-effect--white">
+        <a href="https://www.linkedin.com/in/victor-lopez-685809333/" target="_blank" class="footer__social--link link__hover-effect link__hover-effect--white">
           LinkedIn
         </a>
-        <a href="#" class="footer__social--link link__hover-effect link__hover-effect--white">
+        <a href="#" class="footer__social--link link__hover-effect link__hover-effect--white" onclick="toggleModal()">
           Contact
         </a>
-        <a href="#" class="footer__social--link link__hover-effect link__hover-effect--white">
+        <a href="#" target="_blank" class="footer__social--link link__hover-effect link__hover-effect--white">
           Resume
         </a>
       </div>
