--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <p class="header__para">
             I'm a <b class="orange">Frontend Software Engineer</b> with a strong passion for building web applications with great user experiences.
             <br>
-            Heres a bit more <b class="orange click" onclick="toggleModal()">about me.</b>
+            Here's a bit more <b class="orange click" onclick="toggleModal()">about me.</b>
           </p>
           <div class="social__list">
             <a href="https://www.linkedin.com/in/victor-lopez-685809333/" target="_blank" class="social__link click"><i class="fa-brands fa-linkedin"></i></a>
